test/libsolidity/syntaxTests/nameAndTypeResolution/522_experimental_pragma_duplicate.sol
pragma experimental __test;
pragma experimental __test;
// ----
// Warning 2264: (0-27): Experimental features are turned on. Do not use experimental features on live deployments.
// SyntaxError 1231: (28-55): Duplicate experimental feature name.
